deploy: b92671a952d044773a78dd8009d40ca026819816

--- a/print.html
+++ b/print.html
@@ -2730,6 +2730,18 @@ Product)</a>
 by Henrik Kniberg</p>
 </div>
 <!-- ## minimum marketable product -->
+<h1 id="social-media-platform---example"><a class="header" href="#social-media-platform---example">social media platform - example</a></h1>
+<p><img src="lectures/figures/social_media_platform/p1_wbs.svg"
+style="width:85.0%" /></p>
+<h2 id="social-media-platform---example-1"><a class="header" href="#social-media-platform---example-1">social media platform - example</a></h2>
+<p><img src="lectures/figures/social_media_platform/p2_wbs.svg"
+style="width:85.0%" /></p>
+<h2 id="social-media-platform---example-2"><a class="header" href="#social-media-platform---example-2">social media platform - example</a></h2>
+<p><img src="lectures/figures/social_media_platform/p3_wbs.svg"
+style="width:85.0%" /></p>
+<h2 id="social-media-platform---example-3"><a class="header" href="#social-media-platform---example-3">social media platform - example</a></h2>
+<p><img src="lectures/figures/social_media_platform/p4_wbs.svg"
+style="width:85.0%" /></p>
 <h1 id="what-is-a-user-story"><a class="header" href="#what-is-a-user-story">what is a user story?</a></h1>
 <div>
 <ul>
