--- a/slides/04_requirement_analysis.html
+++ b/slides/04_requirement_analysis.html
@@ -425,6 +425,28 @@ sense of MVP (Minimum Viable Product)</a> by Henrik Kniberg</p>
 </div>
 <!-- ## minimum marketable product -->
 </section></section>
+<section>
+<section id="social-media-platform---example"
+class="title-slide slide level1">
+<h1>social media platform - example</h1>
+<p><img data-src="figures/social_media_platform/p1_wbs.svg"
+style="width:85.0%" /></p>
+</section>
+<section id="social-media-platform---example-1" class="slide level2">
+<h2>social media platform - example</h2>
+<p><img data-src="figures/social_media_platform/p2_wbs.svg"
+style="width:85.0%" /></p>
+</section>
+<section id="social-media-platform---example-2" class="slide level2">
+<h2>social media platform - example</h2>
+<p><img data-src="figures/social_media_platform/p3_wbs.svg"
+style="width:85.0%" /></p>
+</section>
+<section id="social-media-platform---example-3" class="slide level2">
+<h2>social media platform - example</h2>
+<p><img data-src="figures/social_media_platform/p4_wbs.svg"
+style="width:85.0%" /></p>
+</section></section>
 <section id="what-is-a-user-story" class="title-slide slide level1">
 <h1>what is a user story?</h1>
 <div>
