deploy: 941ccd5d48ca18ec3daaeba8c6dd09b5ab4e82cf

--- a/index.html
+++ b/index.html
@@ -230,7 +230,8 @@ Guide</a></li>
 <li><a href="/software-engineering/slides/summary_week02.html">week 2 summary</a></li>
 <li><a href="/software-engineering/slides/04_requirement_analysis.html">requirement
 analysis</a></li>
-<li>user story mapping</li>
+<li><a href="/software-engineering/slides/05_user_story_mapping.html">user story
+mapping</a></li>
 <li><a href="/software-engineering/slides/project.html">project assignment</a></li>
 </ol>
 <h3 id="readings-2"><a class="header" href="#readings-2">readings</a></h3>
@@ -248,6 +249,8 @@ by Henrik Kniberg</li>
 </ul>
 <p>user story mapping</p>
 <ul>
+<li><a href="https://jpattonassociates.com/the-new-backlog/">Jeff Patton’s original
+blogpost</a></li>
 <li><a href="/software-engineering/resources/quickstart-guide-to-user-story-mapping.pdf">Quickstart Guide to User Story
 Mapping</a></li>
 </ul>
