--- a/print.html
+++ b/print.html
@@ -231,7 +231,8 @@ Guide</a></li>
 <li><a href="lectures//software-engineering/slides/summary_week02.html">week 2 summary</a></li>
 <li><a href="lectures//software-engineering/slides/04_requirement_analysis.html">requirement
 analysis</a></li>
-<li>user story mapping</li>
+<li><a href="lectures//software-engineering/slides/05_user_story_mapping.html">user story
+mapping</a></li>
 <li><a href="lectures//software-engineering/slides/project.html">project assignment</a></li>
 </ol>
 <h3 id="readings-2"><a class="header" href="#readings-2">readings</a></h3>
@@ -249,6 +250,8 @@ by Henrik Kniberg</li>
 </ul>
 <p>user story mapping</p>
 <ul>
+<li><a href="https://jpattonassociates.com/the-new-backlog/">Jeff Patton’s original
+blogpost</a></li>
 <li><a href="lectures//software-engineering/resources/quickstart-guide-to-user-story-mapping.pdf">Quickstart Guide to User Story
 Mapping</a></li>
 </ul>
@@ -2862,6 +2865,7 @@ Scenario 4: The ATM has insufficient funds
 </ul>
 <h1 id="gantt-chart"><a class="header" href="#gantt-chart">gantt chart</a></h1>
 <ul>
+<li>project management tool</li>
 <li>illustrates a project schedule</li>
 <li>practical to construct the schedule from the deadline and go backward<!-- - a task is often scheduled to start immediately when its prerequisites -->
 </li>
