--- a/slides/04_requirement_analysis.html
+++ b/slides/04_requirement_analysis.html
@@ -586,6 +586,7 @@ class="title-slide slide level1">
 <section id="gantt-chart" class="title-slide slide level1">
 <h1>gantt chart</h1>
 <ul>
+<li>project management tool</li>
 <li>illustrates a project schedule</li>
 <li>practical to construct the schedule from the deadline and go
 backward
