--- a/lectures/04_requirement_analysis.html
+++ b/lectures/04_requirement_analysis.html
@@ -641,6 +641,7 @@ Scenario 4: The ATM has insufficient funds
 </ul>
 <h1 id="gantt-chart"><a class="header" href="#gantt-chart">gantt chart</a></h1>
 <ul>
+<li>project management tool</li>
 <li>illustrates a project schedule</li>
 <li>practical to construct the schedule from the deadline and go backward<!-- - a task is often scheduled to start immediately when its prerequisites -->
 </li>
