--- a/slides/05_user_story_mapping.html
+++ b/slides/05_user_story_mapping.html
@@ -76,6 +76,61 @@ used</li>
 </ul>
 </aside>
 </section>
+<section id="activity" class="slide level2">
+<h2>activity</h2>
+<div class="columns">
+<div class="column" style="width:50%;">
+<ul>
+<li>is sort of a big thing that people do</li>
+<li>that has lots of steps,</li>
+<li>and doesn’t always have a precise workflow</li>
+</ul>
+<p>activities are still user stories with roles</p>
+</div><div class="column text-size-2" style="width:50%;">
+<pre><code>As a social media platform user
+I want to follow users
+so I can keep up with their posts.</code></pre>
+</div>
+</div>
+<aside class="notes">
+<p>An activity is close to an epic in the scrum literature.</p>
+</aside>
+</section>
+<section id="user-task" class="slide level2">
+<h2>user task</h2>
+<div class="columns">
+<div class="column" style="width:55%;">
+<ul>
+<li>in agile a “task” refers to the things that <em>developers</em> do
+<ul>
+<li>to finish user stories</li>
+</ul></li>
+<li>user story mapping considers the <em>user</em>,
+<ul>
+<li>so a user task is what a user needs to do to complete an
+activity</li>
+</ul></li>
+</ul>
+</div><div class="column" style="width:45%;">
+<dl>
+<dt>for example (follow a user)</dt>
+<dd>
+<ol type="1">
+<li>search for user</li>
+<li>add user to followed list</li>
+</ol>
+</dd>
+</dl>
+</div>
+</div>
+<!--## details
+
+search for user
+
+:   - type username
+    - browse the result lists
+    - click to the "follow" button-->
+</section>
 <section id="section" class="slide level2">
 <h2></h2>
 <figure>
@@ -86,6 +141,7 @@ alt="from “Quickstart Guide to User Story Mapping” by Eben Halford | CC BY-S
 Mapping” by Eben Halford | CC BY-SA 2.5</figcaption>
 </figure>
 </section></section>
+<section>
 <section id="user-story-mapping" class="title-slide slide level1">
 <h1>user story mapping</h1>
 <ul>
@@ -106,6 +162,36 @@ blog post</a></li>
 <li>build a shared understanding of the product and a common
 language</li>
 </ul>
+</section>
+<section id="user-story-map-as-a-document" class="slide level2">
+<h2>user story map as a document</h2>
+<ul>
+<li>not final, not set in stone</li>
+<li>it is possible and encouraged to adjust<br>as the more knowledge is
+acquired about the software
+<ul>
+<li>versioning</li>
+</ul></li>
+<li>you are free to move notes up and down
+<ul>
+<li>change the role (activity ↔︎ user task)</li>
+</ul></li>
+</ul>
+</section></section>
+<section>
+<section id="backbone-skeleton-ribs" class="title-slide slide level1">
+<h1>backbone, skeleton, ribs</h1>
+<p><img data-src="figures/user_story_map_bones.drawio.svg" /></p>
+</section>
+<section id="iterations" class="slide level2">
+<h2>iterations</h2>
+<p><img data-src="figures/user_story_map_increments.drawio.svg" /></p>
+</section></section>
+<section id="social-media-platform---example"
+class="title-slide slide level1">
+<h1>social media platform - example</h1>
+<p><img
+data-src="figures/social_media_platform/usm_sign_up.drawio.svg" /></p>
 </section>
     </div>
   </div>
