deploy: f13ae1575e65b02dc7d5edeafc8dfb373ca14e51

--- a/slides/05_user_story_mapping.html
+++ b/slides/05_user_story_mapping.html
@@ -68,11 +68,9 @@ calc(100% - 1.25rem)" data-background-size="125px">
 <li>consists of three elements
 <ol type="1">
 <li>activities</li>
-<li>tasks</li>
+<li>steps</li>
 <li>details</li>
 </ol></li>
-<li>N.B.: sometimes the activities / steps / user tasks terminology is
-used</li>
 </ul>
 </aside>
 </section>
