deploy: 697318aef9bbd23ba9b11be7477607af33db8dff

--- a/slides/project.html
+++ b/slides/project.html
@@ -43,6 +43,7 @@ calc(100% - 1.25rem)" data-background-size="125px">
   <p class="date">gergo.pinter@uni-corvinus.hu</p>
 </section>
 
+<section>
 <section id="the-project" class="title-slide slide level1">
 <h1>the project</h1>
 <p>An event organizer company entrusts your software development company
@@ -57,7 +58,11 @@ manage not just the position, but the state (light) of the drone.</p>
 follow.</p>
 <p>Your task is to design this software.</p>
 </section>
-
+<section id="drone-show-example" class="slide level2">
+<h2>drone show example</h2>
+<p><a href="https://www.youtube.com/watch?v=3G1KBu6H6BM">Dragon Boat
+Show with 1500 drones in Shenzhen, China</a></p>
+</section></section>
 <section>
 <section id="contents" class="title-slide slide level1">
 <h1>contents</h1>
