--- a/lectures/00_intro.html
+++ b/lectures/00_intro.html
@@ -203,7 +203,7 @@
 <td style="text-align: right;">2</td>
 <td style="text-align: center;">2024-09-17</td>
 <td style="text-align: center;">scrum, kanban</td>
-<td style="text-align: center;">kanban</td>
+<td style="text-align: center;"></td>
 </tr>
 <tr class="odd">
 <td style="text-align: right;">3</td>
@@ -820,9 +820,9 @@ line-spacing="2">
 <div id="ref-harding2024san" class="csl-entry">
 <p>Harding, S. (2024). San francisco’s train system still uses floppy
 disks—and will for years. In <em>Ars Technica</em>. <a href="
-                    https://www.wired.com/story/san-francisco-muni-trains-floppy-disks/
+                    https://www.wired.com/story/san-francisco-muni-trains-floppy-disks
                     " class="uri">
-https://www.wired.com/story/san-francisco-muni-trains-floppy-disks/
+https://www.wired.com/story/san-francisco-muni-trains-floppy-disks
 </a>.</p>
 </div>
 <div id="ref-stahli2021software" class="csl-entry">
