--- a/print.html
+++ b/print.html
@@ -251,10 +251,26 @@ by Henrik Kniberg</li>
 <p>user story mapping</p>
 <ul>
 <li><a href="https://jpattonassociates.com/the-new-backlog/">Jeff Patton’s original
-blogpost</a></li>
+blogpost</a>
+<ul>
+<li><a href="https://jpattonassociates.com/5-story-mapping-mistakes/">Five common story mapping
+mistakes</a> -
+by Jeff Patton</li>
+</ul>
+</li>
+<li><a href="https://www.easyagile.com/blog/the-ultimate-guide-to-user-story-maps/">The Ultimate Guide to User Story
+Mapping</a> -
+by Nick Muldoon</li>
+<li><a href="https://www.nngroup.com/articles/user-story-mapping/">Mapping User Stories in
+Agile</a> - by Anna
+Kaley</li>
 <li><a href="lectures//software-engineering/resources/quickstart-guide-to-user-story-mapping.pdf">Quickstart Guide to User Story
 Mapping</a></li>
 </ul>
+<h2 id="week-4"><a class="header" href="#week-4">week 4</a></h2>
+<ol>
+<li><a href="lectures//software-engineering/slides/summary_week03.html">week 3 summary</a></li>
+</ol>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="schedule"><a class="header" href="#schedule">schedule</a></h1>
 <table>
 <colgroup>
@@ -282,7 +298,7 @@ Mapping</a></li>
 <td style="text-align: right;">2</td>
 <td style="text-align: center;">2024-09-17</td>
 <td style="text-align: center;">scrum, kanban</td>
-<td style="text-align: center;">kanban</td>
+<td style="text-align: center;"></td>
 </tr>
 <tr class="odd">
 <td style="text-align: right;">3</td>
@@ -899,9 +915,9 @@ line-spacing="2">
 <div id="ref-harding2024san" class="csl-entry">
 <p>Harding, S. (2024). San francisco’s train system still uses floppy
 disks—and will for years. In <em>Ars Technica</em>. <a href="lectures/
-                    https://www.wired.com/story/san-francisco-muni-trains-floppy-disks/
+                    https://www.wired.com/story/san-francisco-muni-trains-floppy-disks
                     " class="uri">
-https://www.wired.com/story/san-francisco-muni-trains-floppy-disks/
+https://www.wired.com/story/san-francisco-muni-trains-floppy-disks
 </a>.</p>
 </div>
 <div id="ref-stahli2021software" class="csl-entry">
@@ -2155,9 +2171,9 @@ line-spacing="2">
 <div id="ref-boogaard2021how" class="csl-entry">
 <p>Boogaard, K. (2021). <em>How to use a cumulative flow diagram – wrike</em>.
 <a href="lectures/
-                    https://www.wrike.com/blog/how-to-use-cumulative-flow-diagram/
+                    https://www.wrike.com/blog/how-to-use-cumulative-flow-diagram
                     " class="uri">
-https://www.wrike.com/blog/how-to-use-cumulative-flow-diagram/
+https://www.wrike.com/blog/how-to-use-cumulative-flow-diagram
 </a>.</p>
 </div>
 <div id="ref-schwaber2020scrum" class="csl-entry">
@@ -2910,16 +2926,16 @@ Software</em>, <em>123</em>, 190–213.</p>
 <div id="ref-krysik2023sdlc" class="csl-entry">
 <p>Krysik, A. (2023). <em>SDLC guide: Requirement analysis in software
 engineering</em>. <a href="lectures/
-                    https://stratoflow.com/requirements-analysis/
+                    https://stratoflow.com/requirements-analysis
                     " class="uri">
-https://stratoflow.com/requirements-analysis/
+https://stratoflow.com/requirements-analysis
 </a>.</p>
 </div>
 <div id="ref-north2007what" class="csl-entry">
 <p>Terhorst-North, D. (2007). <em>What’s in a story?</em> <a href="lectures/
-                    https://dannorth.net/whats-in-a-story/
+                    https://dannorth.net/whats-in-a-story
                     " class="uri">
-https://dannorth.net/whats-in-a-story/
+https://dannorth.net/whats-in-a-story
 </a>.</p>
 </div>
 <div id="ref-enwiki:1245895117" class="csl-entry">
