--- a/slides/00_intro.html
+++ b/slides/00_intro.html
@@ -155,7 +155,7 @@ data-visibility="hidden">
 <td style="text-align: right;">2</td>
 <td style="text-align: center;">2024-09-17</td>
 <td style="text-align: center;">scrum, kanban</td>
-<td style="text-align: center;">kanban</td>
+<td style="text-align: center;"></td>
 </tr>
 <tr class="odd">
 <td style="text-align: right;">3</td>
@@ -1025,9 +1025,9 @@ href="
 <div class="csl-left-margin">[4] </div><div class="csl-right-inline">S.
 Harding, <span>“San francisco’s train system still uses floppy disks—and
 will for years,”</span> <em>Ars Technica</em>. <a href="
-                    https://www.wired.com/story/san-francisco-muni-trains-floppy-disks/
+                    https://www.wired.com/story/san-francisco-muni-trains-floppy-disks
                     " class="uri">
-                    https://www.wired.com/story/san-francisco-muni-trains-floppy-disks/
+                    https://www.wired.com/story/san-francisco-muni-trains-floppy-disks
 </a>, 11-Apr-2024.</div>
 </div>
 </div>
