--- a/lectures/HOME.html
+++ b/lectures/HOME.html
@@ -250,10 +250,26 @@ by Henrik Kniberg</li>
 <p>user story mapping</p>
 <ul>
 <li><a href="https://jpattonassociates.com/the-new-backlog/">Jeff Patton’s original
-blogpost</a></li>
+blogpost</a>
+<ul>
+<li><a href="https://jpattonassociates.com/5-story-mapping-mistakes/">Five common story mapping
+mistakes</a> -
+by Jeff Patton</li>
+</ul>
+</li>
+<li><a href="https://www.easyagile.com/blog/the-ultimate-guide-to-user-story-maps/">The Ultimate Guide to User Story
+Mapping</a> -
+by Nick Muldoon</li>
+<li><a href="https://www.nngroup.com/articles/user-story-mapping/">Mapping User Stories in
+Agile</a> - by Anna
+Kaley</li>
 <li><a href="/software-engineering/resources/quickstart-guide-to-user-story-mapping.pdf">Quickstart Guide to User Story
 Mapping</a></li>
 </ul>
+<h2 id="week-4"><a class="header" href="#week-4">week 4</a></h2>
+<ol>
+<li><a href="/software-engineering/slides/summary_week03.html">week 3 summary</a></li>
+</ol>
 
                     </main>
 
