deploy: c73bb9ecb33de0026d1abc83738cd424a2d6142d

--- a/slides/05_user_story_mapping.html
+++ b/slides/05_user_story_mapping.html
@@ -191,6 +191,37 @@ class="title-slide slide level1">
 <p><img
 data-src="figures/social_media_platform/usm_sign_up.drawio.svg" /></p>
 </section>
+
+<section id="user-story-mapping-mistakes"
+class="title-slide slide level1">
+<h1>user story mapping mistakes</h1>
+<div class="columns">
+<div class="column" style="width:50%;">
+<p><img data-src="figures/usm_too_many_details.drawio.svg"
+height="450" /></p>
+</div><div class="column" style="width:50%;">
+<div class="r-stack">
+<div class="fragment">
+<p><img data-src="figures/usm_whole_story_first.drawio.svg"
+height="450" /></p>
+</div>
+<div class="fragment">
+<p><img data-src="figures/usm_whole_story_first_verbs.drawio.svg"
+height="450" /></p>
+</div>
+<div class="fragment">
+<p><img data-src="figures/usm_whole_story_first_extra.drawio.svg"
+height="450" /></p>
+</div>
+</div>
+</div>
+</div>
+<div class="text-smaller">
+<p>more from Jeff Patton: <a
+href="https://jpattonassociates.com/5-story-mapping-mistakes/">5 story
+mapping mistakes</a></p>
+</div>
+</section>
     </div>
   </div>
 
