--- a/slides/summary_week03.html
+++ b/slides/summary_week03.html
@@ -226,6 +226,10 @@ height="450" /></p>
 height="450" /></p>
 </div>
 <div class="fragment">
+<p><img data-src="figures/usm_whole_story_first_verbs.drawio.svg"
+height="450" /></p>
+</div>
+<div class="fragment">
 <p><img data-src="figures/usm_whole_story_first_extra.drawio.svg"
 height="450" /></p>
 </div>
