deploy: d96f85ded7c04133431aaead37f5333344f2138f

--- a/print.html
+++ b/print.html
@@ -274,10 +274,10 @@ Mapping</a></li>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="schedule"><a class="header" href="#schedule">schedule</a></h1>
 <table>
 <colgroup>
-<col style="width: 8%" />
-<col style="width: 16%" />
-<col style="width: 48%" />
-<col style="width: 27%" />
+<col style="width: 7%" />
+<col style="width: 15%" />
+<col style="width: 52%" />
+<col style="width: 25%" />
 </colgroup>
 <thead>
 <tr class="header">
@@ -303,20 +303,21 @@ Mapping</a></li>
 <tr class="odd">
 <td style="text-align: right;">3</td>
 <td style="text-align: center;">2024-09-24</td>
-<td style="text-align: center;">requirement analysis</td>
-<td style="text-align: center;">user story mapping</td>
+<td style="text-align: center;">requirement analysis, user story
+mapping</td>
+<td style="text-align: center;">project assignment</td>
 </tr>
 <tr class="even">
 <td style="text-align: right;">4</td>
 <td style="text-align: center;">2024-10-01</td>
 <td style="text-align: center;">UML, C4</td>
-<td style="text-align: center;">UML in practice</td>
+<td style="text-align: center;">workshop</td>
 </tr>
 <tr class="odd">
 <td style="text-align: right;">5</td>
 <td style="text-align: center;">2024-10-08</td>
-<td style="text-align: center;">“communication”, clean code</td>
-<td style="text-align: center;">case studies</td>
+<td style="text-align: center;">SOLID, clean code</td>
+<td style="text-align: center;">project workshop</td>
 </tr>
 <tr class="even">
 <td style="text-align: right;">6</td>
@@ -328,7 +329,7 @@ Mapping</a></li>
 <td style="text-align: right;">7</td>
 <td style="text-align: center;">2024-10-22</td>
 <td style="text-align: center;">testing, review</td>
-<td style="text-align: center;">project assignment</td>
+<td style="text-align: center;">project workshop</td>
 </tr>
 <tr class="even">
 <td style="text-align: right;">8</td>
