--- a/lectures/00_intro.html
+++ b/lectures/00_intro.html
@@ -179,10 +179,10 @@
                         <h1 id="schedule"><a class="header" href="#schedule">schedule</a></h1>
 <table>
 <colgroup>
-<col style="width: 8%" />
-<col style="width: 16%" />
-<col style="width: 48%" />
-<col style="width: 27%" />
+<col style="width: 7%" />
+<col style="width: 15%" />
+<col style="width: 52%" />
+<col style="width: 25%" />
 </colgroup>
 <thead>
 <tr class="header">
@@ -208,20 +208,21 @@
 <tr class="odd">
 <td style="text-align: right;">3</td>
 <td style="text-align: center;">2024-09-24</td>
-<td style="text-align: center;">requirement analysis</td>
-<td style="text-align: center;">user story mapping</td>
+<td style="text-align: center;">requirement analysis, user story
+mapping</td>
+<td style="text-align: center;">project assignment</td>
 </tr>
 <tr class="even">
 <td style="text-align: right;">4</td>
 <td style="text-align: center;">2024-10-01</td>
 <td style="text-align: center;">UML, C4</td>
-<td style="text-align: center;">UML in practice</td>
+<td style="text-align: center;">workshop</td>
 </tr>
 <tr class="odd">
 <td style="text-align: right;">5</td>
 <td style="text-align: center;">2024-10-08</td>
-<td style="text-align: center;">“communication”, clean code</td>
-<td style="text-align: center;">case studies</td>
+<td style="text-align: center;">SOLID, clean code</td>
+<td style="text-align: center;">project workshop</td>
 </tr>
 <tr class="even">
 <td style="text-align: right;">6</td>
@@ -233,7 +234,7 @@
 <td style="text-align: right;">7</td>
 <td style="text-align: center;">2024-10-22</td>
 <td style="text-align: center;">testing, review</td>
-<td style="text-align: center;">project assignment</td>
+<td style="text-align: center;">project workshop</td>
 </tr>
 <tr class="even">
 <td style="text-align: right;">8</td>
