--- a/slides/00_intro.html
+++ b/slides/00_intro.html
@@ -131,10 +131,10 @@ data-visibility="hidden">
 <h1 data-visibility="hidden">schedule</h1>
 <table>
 <colgroup>
-<col style="width: 8%" />
-<col style="width: 16%" />
-<col style="width: 48%" />
-<col style="width: 27%" />
+<col style="width: 7%" />
+<col style="width: 15%" />
+<col style="width: 52%" />
+<col style="width: 25%" />
 </colgroup>
 <thead>
 <tr class="header">
@@ -160,20 +160,21 @@ data-visibility="hidden">
 <tr class="odd">
 <td style="text-align: right;">3</td>
 <td style="text-align: center;">2024-09-24</td>
-<td style="text-align: center;">requirement analysis</td>
-<td style="text-align: center;">user story mapping</td>
+<td style="text-align: center;">requirement analysis, user story
+mapping</td>
+<td style="text-align: center;">project assignment</td>
 </tr>
 <tr class="even">
 <td style="text-align: right;">4</td>
 <td style="text-align: center;">2024-10-01</td>
 <td style="text-align: center;">UML, C4</td>
-<td style="text-align: center;">UML in practice</td>
+<td style="text-align: center;">workshop</td>
 </tr>
 <tr class="odd">
 <td style="text-align: right;">5</td>
 <td style="text-align: center;">2024-10-08</td>
-<td style="text-align: center;">“communication”, clean code</td>
-<td style="text-align: center;">case studies</td>
+<td style="text-align: center;">SOLID, clean code</td>
+<td style="text-align: center;">project workshop</td>
 </tr>
 <tr class="even">
 <td style="text-align: right;">6</td>
@@ -185,7 +186,7 @@ data-visibility="hidden">
 <td style="text-align: right;">7</td>
 <td style="text-align: center;">2024-10-22</td>
 <td style="text-align: center;">testing, review</td>
-<td style="text-align: center;">project assignment</td>
+<td style="text-align: center;">project workshop</td>
 </tr>
 <tr class="even">
 <td style="text-align: right;">8</td>
@@ -240,10 +241,10 @@ class="title-slide slide level1 exclude-header">
 <div class="exclude">
 <table>
 <colgroup>
-<col style="width: 8%" />
-<col style="width: 16%" />
-<col style="width: 48%" />
-<col style="width: 27%" />
+<col style="width: 7%" />
+<col style="width: 15%" />
+<col style="width: 52%" />
+<col style="width: 25%" />
 </colgroup>
 <thead>
 <tr class="header">
@@ -269,8 +270,9 @@ class="title-slide slide level1 exclude-header">
 <tr class="odd">
 <td style="text-align: right;">3</td>
 <td style="text-align: center;">2024-09-24</td>
-<td style="text-align: center;">requirement analysis</td>
-<td style="text-align: center;">user story mappint</td>
+<td style="text-align: center;">requirement analysis, user story
+mapping</td>
+<td style="text-align: center;">project assignment</td>
 </tr>
 <tr class="even">
 <td style="text-align: right;">4</td>
@@ -281,8 +283,8 @@ class="title-slide slide level1 exclude-header">
 <tr class="odd">
 <td style="text-align: right;">5</td>
 <td style="text-align: center;">2024-10-08</td>
-<td style="text-align: center;">“communication”, clean code</td>
-<td style="text-align: center;">case studies</td>
+<td style="text-align: center;">SOLID, clean code</td>
+<td style="text-align: center;">project workshop</td>
 </tr>
 <tr class="even">
 <td style="text-align: right;">6</td>
@@ -294,7 +296,7 @@ class="title-slide slide level1 exclude-header">
 <td style="text-align: right;">7</td>
 <td style="text-align: center;">2024-10-22</td>
 <td style="text-align: center;">testing, review</td>
-<td style="text-align: center;">project assignment</td>
+<td style="text-align: center;">project workshop</td>
 </tr>
 </tbody>
 </table>
@@ -305,10 +307,10 @@ class="title-slide slide level1 exclude-header">
 <div class="exclude">
 <table>
 <colgroup>
-<col style="width: 8%" />
-<col style="width: 16%" />
-<col style="width: 48%" />
-<col style="width: 27%" />
+<col style="width: 7%" />
+<col style="width: 15%" />
+<col style="width: 52%" />
+<col style="width: 25%" />
 </colgroup>
 <thead>
 <tr class="header">
