--- a/print.html
+++ b/print.html
@@ -247,6 +247,9 @@ Daniel Terhorst-North</li>
 Earliest
 Testable/Usable/Lovable</a> -
 by Henrik Kniberg</li>
+<li><a href="https://www.wrike.com/blog/how-carry-out-requirements-analysis/">How to Carry Out a Requirements
+Analysis</a> -
+by Kelechi Udoagwu</li>
 </ul>
 <p>user story mapping</p>
 <ul>
@@ -267,9 +270,16 @@ Kaley</li>
 <li><a href="lectures//software-engineering/resources/quickstart-guide-to-user-story-mapping.pdf">Quickstart Guide to User Story
 Mapping</a></li>
 </ul>
+<h4 id="optional"><a class="header" href="#optional">optional</a></h4>
+<ul>
+<li><a href="https://www.lucidchart.com/pages/data-flow-diagram">What is a Data Flow
+Diagram</a></li>
+</ul>
 <h2 id="week-4"><a class="header" href="#week-4">week 4</a></h2>
 <ol>
 <li><a href="lectures//software-engineering/slides/summary_week03.html">week 3 summary</a></li>
+<li>UML</li>
+<li>C4</li>
 </ol>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="schedule"><a class="header" href="#schedule">schedule</a></h1>
 <table>
