--- a/lectures/HOME.html
+++ b/lectures/HOME.html
@@ -277,7 +277,7 @@ Diagram</a></li>
 <h2 id="week-4"><a class="header" href="#week-4">week 4</a></h2>
 <ol>
 <li><a href="/software-engineering/slides/summary_week03.html">week 3 summary</a></li>
-<li>UML</li>
+<li><a href="/software-engineering/slides/uml.html">UML</a></li>
 <li>C4</li>
 </ol>
 
