--- a/print.html
+++ b/print.html
@@ -278,7 +278,7 @@ Diagram</a></li>
 <h2 id="week-4"><a class="header" href="#week-4">week 4</a></h2>
 <ol>
 <li><a href="lectures//software-engineering/slides/summary_week03.html">week 3 summary</a></li>
-<li>UML</li>
+<li><a href="lectures//software-engineering/slides/uml.html">UML</a></li>
 <li>C4</li>
 </ol>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="schedule"><a class="header" href="#schedule">schedule</a></h1>
