deploy: 1daf642cb6744b15217620c370396d4b29c37095

--- a/lectures/06_uml.html
+++ b/lectures/06_uml.html
@@ -524,6 +524,8 @@ when the container is destroyed. (Wikipedia contributors, 2024)</p>
 </div>
 <h2 id="class-diagram---example"><a class="header" href="#class-diagram---example">class diagram - example</a></h2>
 <img src="figures/uml/class_example.svg" height="450" />
+<h2 id="class-diagram---example-1"><a class="header" href="#class-diagram---example-1">class diagram - example</a></h2>
+<img src="figures/uml/class_example_2.svg" height="450" />
 <h1 id="object-diagram"><a class="header" href="#object-diagram">object diagram</a></h1>
 <ul>
 <li>special case of a class diagram</li>
