--- a/slides/06_uml.html
+++ b/slides/06_uml.html
@@ -511,6 +511,10 @@ data-cites="enwiki:1230720147">[3]</span></p>
 <section id="class-diagram---example" class="slide level2">
 <h2>class diagram - example</h2>
 <p><img data-src="figures/uml/class_example.svg" height="450" /></p>
+</section>
+<section id="class-diagram---example-1" class="slide level2">
+<h2>class diagram - example</h2>
+<p><img data-src="figures/uml/class_example_2.svg" height="450" /></p>
 </section></section>
 <section id="object-diagram" class="title-slide slide level1">
 <h1>object diagram</h1>
