deploy: 49dc5830a46c19f6192fd113c67db0f8470b6422

--- a/print.html
+++ b/print.html
@@ -281,6 +281,11 @@ Diagram</a></li>
 <li><a href="lectures//software-engineering/slides/06_uml.html">UML</a></li>
 <li>C4</li>
 </ol>
+<h4 id="readings-3"><a class="header" href="#readings-3">readings</a></h4>
+<p>C4 model</p>
+<ul>
+<li><a href="https://c4model.com/">C4 model</a></li>
+</ul>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="schedule"><a class="header" href="#schedule">schedule</a></h1>
 <table>
 <colgroup>
