--- a/lectures/HOME.html
+++ b/lectures/HOME.html
@@ -280,6 +280,11 @@ Diagram</a></li>
 <li><a href="/software-engineering/slides/06_uml.html">UML</a></li>
 <li>C4</li>
 </ol>
+<h4 id="readings-3"><a class="header" href="#readings-3">readings</a></h4>
+<p>C4 model</p>
+<ul>
+<li><a href="https://c4model.com/">C4 model</a></li>
+</ul>
 
                     </main>
 
