deploy: f4516d925903c613d6f926cd8e60395ecd12b854

--- a/slides/project.html
+++ b/slides/project.html
@@ -144,6 +144,8 @@ Drawings</a></li>
 Drawings</a></li>
 <li>team management: <a href="https://trello.com/">Trello</a></li>
 <li>UML: <a href="https://app.diagrams.net/">draw.io</a></li>
+<li>C4: <a href="https://docs.google.com/drawings">Google
+Drawings</a></li>
 </ul>
 </section>
     </div>
